--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </p>
                                 <p>
                                     Border: <br>
-                                    <span class="border"></span>
+                                    <span class="borders"></span>
                                 </p>
                             </div>
                         </li>
@@ -125,7 +125,7 @@
                     </ul>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
